[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Editor/PropertyEditor/PlatShapeProperty.gd" type="Script" id=1]
[ext_resource path="res://res/txrs/gui/fullwall.png" type="Texture" id=2]
[ext_resource path="res://res/txrs/gui/diamondplat.png" type="Texture" id=3]
[ext_resource path="res://res/txrs/gui/halfwall.png" type="Texture" id=4]
[ext_resource path="res://res/txrs/gui/triplattr.png" type="Texture" id=5]
[ext_resource path="res://res/txrs/gui/halfwall_top.png" type="Texture" id=6]
[ext_resource path="res://res/txrs/gui/triplatbl.png" type="Texture" id=7]

[node name="PlatShapeProperty" type="VBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 220.0
margin_bottom = 46.0
script = ExtResource( 1 )

[node name="QuadShapes" type="HBoxContainer" parent="."]
margin_right = 210.0
margin_bottom = 36.0
custom_constants/separation = 0
alignment = 1

[node name="FullPlat" type="Button" parent="QuadShapes"]
margin_left = 63.0
margin_right = 105.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 2 )

[node name="DiaPlat" type="Button" parent="QuadShapes"]
margin_left = 105.0
margin_right = 147.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 3 )

[node name="TriShapes" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 210.0
margin_bottom = 76.0
custom_constants/separation = 0
alignment = 1

[node name="TriPlatBR" type="Button" parent="TriShapes"]
margin_left = 21.0
margin_right = 63.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 4 )

[node name="TriPlatTR" type="Button" parent="TriShapes"]
margin_left = 63.0
margin_right = 105.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 5 )

[node name="TriPlatTL" type="Button" parent="TriShapes"]
margin_left = 105.0
margin_right = 147.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 6 )

[node name="TriPlatBL" type="Button" parent="TriShapes"]
margin_left = 147.0
margin_right = 189.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 7 )
[connection signal="pressed" from="QuadShapes/FullPlat" to="." method="_on_FullPlat_pressed"]
[connection signal="pressed" from="QuadShapes/DiaPlat" to="." method="_on_DiaPlat_pressed"]
[connection signal="pressed" from="TriShapes/TriPlatBR" to="." method="_on_TriPlatBR_pressed"]
[connection signal="pressed" from="TriShapes/TriPlatTR" to="." method="_on_TriPlatTR_pressed"]
[connection signal="pressed" from="TriShapes/TriPlatTL" to="." method="_on_TriPlatTL_pressed"]
[connection signal="pressed" from="TriShapes/TriPlatBL" to="." method="_on_TriPlatBL_pressed"]
